# semantic-kernel-playground

./: .commit_template  .pre-commit-config.yaml  README.md  pyproject.toml
