[project]
name = "semantic-kernel-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "arukikata",email = "ayuki.katayama.kc1@is.naist.jp"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

